[package]
name = "samus_fighters_pass"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = "0.2.1"
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
smashline = { git = "https://github.com/blu-dev/smashline.git", branch = "development" }
custom_var = { path = "./custom-var" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
